# compiler-optimization

./: .gitignore  CMakeLists.txt  README.md  compile.sh  env.sh  main.c
CSCD70/Assignment1-Introduction_to_LLVM/LocalOpts/: CMakeLists.txt
CSCD70/Assignment1-Introduction_to_LLVM/LocalOpts/lib/: 1-AlgebraicIdentity.cpp  2-StrengthReduction.cpp  3-MultiInstOpt.cpp  LocalOpts.h  Makefile  TestCase1-opt.ll  TestCase2-opt.ll  compile_commands.json
CSCD70/Assignment1-Introduction_to_LLVM/LocalOpts/test/: TestCase1.ll
CSCD70/Assignment2-Dataflow_Analysis/: Makefile  compile_commands.json  compile_flags.txt
CSCD70/Assignment2-Dataflow_Analysis/include/DFA/: MeetOp.h
CSCD70/Assignment2-Dataflow_Analysis/include/DFA/Domain/: Base.h  Expression.h
CSCD70/Assignment2-Dataflow_Analysis/include/DFA/Flow/: BackwardAnalysis.h  ForwardAnalysis.h  Framework.h
CSCD70/Assignment2-Dataflow_Analysis/lib/: 1-AvailExprs.cpp  DFA.h
CSCD70/Assignment3-Loop_Invariant_Code_Motion/lib/: Makefile  RegAllocIntfGraph.cpp  compile_commands.json
CSCD70/Tutorial02-Introduction_to_LLVM_ii/Example1-Transform_Pass_Example/lib/: Makefile
CSCD70/Tutorial07-Register_Allocation/: CMakeLists.txt  LLVM_notes.md  Makefile  compile_commands.json
CSCD70/Tutorial07-Register_Allocation/lib/: Makefile  RegAllocMinimal.cpp
basicblock/: CMakeLists.txt  basicblock.c  basicblock.h
block/: CMakeLists.txt  block.c  block.h
cfg-builder/: builder.cpp  builder.h
cfg/cfg-builder/: builder.cpp
cfg/tests/: Makefile  test_dominators  test_dominators.cpp
cfg/tests/data/: graph.txt
definition/: CMakeLists.txt  definition.c  definition.h
dominators/: dominators.cpp  dominators.h
expression/: expression.c  expression.h
flow/: CMakeLists.txt  flow.c  flow.h
integer_set/: CMakeLists.txt  integer_set.c  integer_set.h
ir/: .gitignore  Makefile  README.md  array.c  array.h  basicblock.c  basicblock.h  bitmap.c  bitmap.h  compile_commands.json  constant.c  constant.h  constant_prop.c  constant_prop.h  constants.h  deadcode_elimination.c  deadcode_elimination.h  dfa.c  dfa.h  dominators.c  dominators.h  function.c  function.h  global_constants.h  instruction.c  instruction.h  ir_gen.c  ir_gen.h  ir_parser.c  ir_parser.h  lexer.c  lexer.h  main.c  map.c  map.h  mem.c  mem.h  parser.c  parser.h  set.c  (+11 more)
ir/samples/: 01.txt  02.txt  03.txt  04.txt  05.txt  06.txt  07.txt  ir.txt
ir/tests/: test_dominators.c
ir/tools/: tikz_visualizer.c
llvm-passes/: FunctionInfo.cpp  HelloWorld.cpp  Makefile  MyRegAlloc.cpp  README.md  compile_commands.json  compile_flags.txt  env.sh  loop.ll  loop_opt.ll  matmul_opt.ll
llvm-passes/dfa/: Makefile  compile_commands.json  dfa.cpp  dfa.h
llvm-passes/sample-code/: conditional.bc  conditional.c  conditional.ll  conditionalM2R.bc  conditionalM2R.ll  loop.bc  loop.c  loop.ll  matmul.c  matmul.ll  matmul_opt.ll
local_value_numbering/: lvn.py
map/: CMakeLists.txt  map.c  map.h
mem/: mem.c  mem.h
memory/: CMakeLists.txt  memory.h
notes/: flow_framework.tex  into-ssa.adoc  into-ssa.fdb_latexmk  into-ssa.fls  into-ssa.html  into-ssa.tex
opt-framework/: main.c
opt-framework/basicblock/: basicblock.c
opt-framework/definition/: CMakeLists.txt  definition.h
opt-framework/expression/: CMakeLists.txt
opt-framework/flow/: flow.c  flow.h
opt-framework/integer_set/: CMakeLists.txt
opt-framework/linked_list/: CMakeLists.txt  linked_list.c  linked_list.h
opt-framework/map/: CMakeLists.txt  map.c  map.h
opt-framework/mem/: CMakeLists.txt  mem.c  mem.h
opt-framework/parser/: CMakeLists.txt  parser.c  parser.h  token.c
opt-framework/scripts/: cli.py  format.sh
opt-framework/tests/: CMakeLists.txt
opt-framework/tests/integer_set/: CMakeLists.txt  test_integer_set_5.c
opt-framework/tests/map/: CMakeLists.txt
opt-framework/tests/memory/: test_memory_1.c
opt-framework/tests/value/: CMakeLists.txt  test_value_numbering_1.c
opt-framework/tests/variable/: CMakeLists.txt  test_variable_1.c
opt-framework/value/: CMakeLists.txt  value.c  value.h
opt-framework/variable/: variable.h
parser/: CMakeLists.txt  parser.c
pocs/: threeaddr_parser.py
pyir/: README.md  constructs.py  ir.py
scripts/: dag.py  value_numbering.py
tests/: CMakeLists.txt  test_dominators  test_dominators.cpp
tests/data/: graph.txt
tests/integer_set/: CMakeLists.txt  test_integer_set_1.c  test_integer_set_2.c  test_integer_set_3.c  test_integer_set_4.c  test_integer_set_5.c  test_integer_set_6.c
tests/memory/: CMakeLists.txt  test_memory_1.c
tests/test_dominators.dSYM/Contents/: Info.plist
tests/test_dominators.dSYM/Contents/Resources/DWARF/: test_dominators
tests/test_dominators.dSYM/Contents/Resources/Relocations/aarch64/: test_dominators.yml
tests/variable/: CMakeLists.txt  test_variable_2.c
textbooks/: mem2reg_made_simple.html
utils/: node.cpp  node.h
value/: CMakeLists.txt  value.c  value.h
variable/: CMakeLists.txt  variable.c  variable.h
